fix scrolling issue on iphone

--- a/src/scss/_common/_header.scss
+++ b/src/scss/_common/_header.scss
@@ -66,8 +66,10 @@
         text-align: right;
         float: right;
         white-space: nowrap;
+        display: none;
 
         &.open {
+            display: block;
             opacity: 1;
             visibility: visible;
 
